--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
+    "axios": "0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "install": "^0.13.0",
     "mongoose": "^7.1.0",
+    "npm": "^9.6.6",
+    "o": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
