--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "install": "^0.13.0",
+    "joi": "^17.9.2",
     "mongoose": "^7.1.0",
     "npm": "^9.6.6",
     "o": "^2.3.2",
